<resources>
    <string name="admob_app_id" translatable="false">ca-app-pub-7928027245732586~4627224779</string>
    <string name="admob_banner_id" translatable="false">ca-app-pub-7928027245732586/7785936233</string>
    <string name="app_name">WeiJu</string>
    <string name="search">Search</string>
    <string name="select_app">Select app</string>
    <string name="add">Add</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="empty_hint">You have not added an app yet</string>
    <string name="hook_category_ui_tool">UI tool</string>
    <string name="hook_category_status_bar">Status bar</string>
    <string name="hook_category_navigation_bar">Navigation bar</string>
    <string name="hook_category_variable">Variable</string>
    <string name="hook_category_translation">Translation</string>
    <string name="hook_category_screen">Screen</string>
    <string name="hook_category_expand_tool">Expand tool</string>
    <string name="hook_category_save_as_template">Save as template</string>
    <string name="hook_category_apply_template">Apply template</string>
    <string name="hook_category_force_stop">Force stop</string>
    <string name="home_card_title_hooking_apps">Hooking apps</string>
    <string name="home_card_title_module_state">Module state</string>
    <string name="module_new_version_hint">New version is here</string>
    <string name="module_waring_hint">Please enable this module in xposed</string>
    <string name="module_active_hint">The module is running</string>
    <string name="hook_category">Category</string>
    <string name="foreground_notification">Used to monitor the install and uninstall of the app</string>
    <string name="new_version">new version</string>
    <string name="enable_module">enable module</string>
    <string name="ad">AD</string>
    <string name="pref_screen_orientation_summary">Set app display orientation (%s)</string>
    <string name="pref_force_screenshot_summary">Resolving some apps will block your screenshots and screen record restrictions</string>
    <string name="pref_language_summary">If it is invalid, please set the language in the application to follow the system (%s)</string>
    <string name="pref_cancel_dialog_title">Cancel dialog</string>
    <string name="language">Language</string>
    <string name="pref_force_screenshot_title"><![CDATA[Force screenshot & Record]]></string>
    <string name="orientation">Orientation</string>
    <string name="pref_model">Model</string>
    <string name="pref_brand">Brand</string>
    <string name="pref_device">Device</string>
    <string name="pref_product_name">Product name</string>
    <string name="pref_android_version">Android version</string>
    <string name="open">Open</string>
    <string name="hide">Hide</string>
    <string name="status_bar_hide_summary">Hide the status bar, if you need</string>
    <string name="background_color">Background color</string>
    <string name="icon_color">Icon color</string>
    <string name="status_bar_background_color_summary">Gets the theme color of APP as the background of the status bar (%s)</string>
    <string name="status_bar_icon_color_summary">If your background conflicts with icon, you can try this, it\'s need android 6.0 (%s)</string>
    <string name="custom_color">Custom color</string>
    <string name="status_bar_custom_color_summary">Custom the status bar background color, for example #448aff (%s)</string>
    <string name="nav_bar_icon_color_summary">If your background conflicts with icon, you can try this, it\'s need android 8.0 (%s)</string>
    <string name="nav_bar_custom_color_summary">Custom the navigation bar background color, for example #448aff (%s)</string>
    <string name="nav_bar_background_color_summary">Gets the theme color of APP as the background of the navigation bar (%s)</string>
    <string name="nav_bar_hide_summary">Hide the navigation bar, if you need</string>
    <string name="xposed_description">Aggregate xposed tools that provide a lot of customization</string>
    <string name="reset">Reset</string>
    <string name="template_change">Template is changed</string>
    <string name="apply_success">Apply success</string>
    <string name="update_log">Update log</string>
    <string name="update_log_message">First version release:\n1.Status bar tools\n2.Navigation bar tools\n3.Screen tools\n4.Variable tools</string>
    <string name="config_template">Config template</string>
    <string name="boot_completed_summary">Monitor the installation and uninstall of the application to update the database in real time</string>
    <string name="boot_completed">Auto startup</string>
    <string name="hide_system_app">Hide system app</string>
    <string name="undo">UNDO</string>
    <string name="reset_success">Reset success</string>
    <string name="error_message">Error message</string>
    <string name="auto_apply_template_summary">Automatically apply templates to your app after adding it</string>
    <string name="auto_apply_template">Auto apply template</string>
    <string name="template">Template</string>
    <string name="translation">Translation</string>
    <string name="you_dao">Youdao</string>
    <string name="so_gou">Sogou</string>
    <string name="bai_du">Baidu</string>
    <string name="help">Help</string>
    <string name="general">General</string>
    <string name="filter">Filter</string>
    <string name="app">App</string>
    <string name="translation_data">Translation data</string>
    <string name="word_count_limit_summary">Only save translation data with words in %s or less</string>
    <string name="word_count_limit">Word count limit</string>
    <string name="save_translation_data">Save translation data</string>
    <string name="save_translation_data_summary">Save translation data to the local, you can save a lot of traffic, and greatly improve translation efficiency</string>
    <string name="general_screen_summary">App normal setting</string>
    <string name="template_screen_summary">Config your template</string>
    <string name="about_screen_summary">Show license and author info</string>
    <string name="translation_screen_summary">Config API information</string>
    <string name="translation_from">From</string>
    <string name="translation_to">To</string>
    <string name="translation_api">Translation api</string>
    <string name="translation_data_files_summary">You can use it to fix the translation data</string>
    <string name="translation_data_files">Translation data files</string>
    <string name="translation_editor">Translation Editor</string>
    <string name="save_success">Save success</string>
    <string name="more_options">More options</string>
    <string name="not_have_translation_files_remind">Not have translation data files yet</string>
    <string name="go">Go</string>
    <string name="warning">warning</string>
    <string name="not_save_translation_data_remind">You have not save the translation data, will you want exit?</string>
    <string name="save">Save</string>
    <string name="translation_need_save">%s translation need save</string>
    <string name="exit">Exit</string>
    <string name="save_and_exit">Save and Exit</string>
    <string name="set_translation_appid_key_remind">If you are unable to translate, first make sure your appid and key are configured.</string>
    <string name="not_remind_again">Don\'t remind again</string>
    <string name="select">select</string>
    <string name="bug" translatable="false">Bug</string>
    <string name="report_bug">Report bug</string>
    <string name="clear">Clear</string>
    <string name="rewarded_ad">Rewarded Ad</string>
    <string name="reward">Reward</string>
    <string name="watch">Watch</string>
    <string name="rewarded_ad_watch_remind">Watch an ad to get 5000 Sogou translation API characters, make sure to watch?\nThe current total number of characters is: %s</string>
    <string name="item_deleted_remind">Item is deleted</string>
    <string name="exclude_from_recent">Exclude from recent</string>
    <string name="development">Development</string>
    <string name="toast_color">Toast color</string>
    <string name="pref_longitude">Longitude</string>
    <string name="pref_latitude">Latitude</string>
    <string name="export_config">Export config</string>
    <string name="import_config">Import config</string>
    <string name="copy_success">Copy success</string>
    <string name="import_import_error">Import failed, please check your configuration</string>
    <string name="choose_theme">Choose theme</string>

</resources>
