<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/app">

        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:key="theme"
            app:title="@string/choose_theme" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="is_boot_completed"
            android:summary="@string/boot_completed_summary"
            android:title="@string/boot_completed" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/filter">

        <SwitchPreference
            android:defaultValue="true"
            android:key="is_hide_system_app"
            android:title="@string/hide_system_app" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/bug">

        <Preference
            android:defaultValue="true"
            android:icon="@drawable/ic_bug_report"
            android:key="report_bug"
            android:title="@string/report_bug" />
    </PreferenceCategory>

</PreferenceScreen>